# json-parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  checker.cpp  compile_params.in  enable.in  formatter.cpp  grammar.ebnf  jparser.pc.in  prettify.cpp  stringify.cpp  test.sh
benchmark/: Makefile  benchmark  benchmark.sh
data/: README.md  short.json
examples/: CMakeLists.txt  Checker.cpp  Color.cpp  Matcher.cpp  Prettify.cpp  checker.cpp  palette.json  prettify.cpp  stringify.cpp
gnu/: Makefile  parser.y  scanner.l
inc/: ast.h  parser.h  scanner.h  token.h  tokens.h  utils.h  visitor.h
include/: AST.h  JSONParser.h  Matcher.h  StringVisitor.h  ast.h  json_parser.h  parser.h  scanner.h  string_visitor.h  visitor.h
include/jparser/: AST.h  Matcher.h  Scanner.h  StringVisitor.h  Visitor.h  jparser.h
lib/: Makefile
scripts/: benchmark.sh  test.sh
src/: AST.cpp  Matcher.cpp  Scanner.cpp  StringVisitor.cpp  Visitor.cpp  ast.cpp  parser.cpp  scanner.cpp  string_visitor.cpp  token.cpp  utils.cpp  visitor.cpp
tests/: CMakeLists.txt  README.md
tools/: CMakeLists.txt  Check.cpp  Color.cpp  Match.cpp  Pretty.cpp  Ugly.cpp
